--- a/MyFilesSwift9/Base.lproj/Main.storyboard
+++ b/MyFilesSwift9/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6249" systemVersion="14D98g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1066" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6243"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -37,6 +37,9 @@
                                 <state key="normal" title="External PDF">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <segue destination="EZa-ne-w6N" kind="presentation" id="Cjp-84-F6d"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -102,6 +105,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jAF-Ca-poz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="695" y="241"/>
+        </scene>
+        <!--Load External View Controller-->
+        <scene sceneID="DQX-8w-NSn">
+            <objects>
+                <viewController id="EZa-ne-w6N" customClass="LoadExternalViewController" customModule="MyFilesSwift9" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="j0R-U5-KaK"/>
+                        <viewControllerLayoutGuide type="bottom" id="k6P-lu-RA3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="15h-Ke-6Ie">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rfS-XM-yuM">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="My External PDF" id="mwP-Kb-EQr">
+                                        <barButtonItem key="leftBarButtonItem" title="&lt; Back" id="DFm-1K-g3w">
+                                            <connections>
+                                                <action selector="btnBack:" destination="EZa-ne-w6N" id="WGa-XD-dBa"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dIH-pj-gTJ">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="rfS-XM-yuM" secondAttribute="trailing" id="4Hr-sC-9Bt"/>
+                            <constraint firstItem="dIH-pj-gTJ" firstAttribute="leading" secondItem="15h-Ke-6Ie" secondAttribute="leading" id="CdJ-NR-Bkn"/>
+                            <constraint firstItem="rfS-XM-yuM" firstAttribute="top" secondItem="j0R-U5-KaK" secondAttribute="bottom" id="Hkc-Rv-q8t"/>
+                            <constraint firstItem="dIH-pj-gTJ" firstAttribute="top" secondItem="rfS-XM-yuM" secondAttribute="bottom" id="J5k-fI-wmb"/>
+                            <constraint firstItem="dIH-pj-gTJ" firstAttribute="bottom" secondItem="k6P-lu-RA3" secondAttribute="top" id="eJy-Tg-MCl"/>
+                            <constraint firstItem="dIH-pj-gTJ" firstAttribute="trailing" secondItem="rfS-XM-yuM" secondAttribute="trailing" id="sNr-ad-pcC"/>
+                            <constraint firstItem="dIH-pj-gTJ" firstAttribute="leading" secondItem="rfS-XM-yuM" secondAttribute="leading" id="yRc-Ai-cb6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="webview" destination="dIH-pj-gTJ" id="Wzs-At-Tv7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="H5x-cc-i3q" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="59" y="942"/>
         </scene>
     </scenes>
 </document>
